[package]
name = "airports"
version = "0.0.2"
edition = "2021"
description = "Provides mapping between IATA airport codes and timezones"
repository = "https://github.com/kroemeke/airports/"
license = "MIT OR Apache-2.0"
keywords = ["iata", "timezone"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.1"
serde_yaml = "0.8.24"
